Zeus.Dsp/Wdsp/NativeMethods.cs


    [LibraryImport(LibraryName)]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial void SetEXTNOBHangtime(int id, double time);

    [LibraryImport(LibraryName)]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial void SetEXTNOBAdvtime(int id, double time);

    [LibraryImport(LibraryName)]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial void SetEXTNOBBacktau(int id, double tau);

    [LibraryImport(LibraryName)]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial void SetEXTNOBThreshold(int id, double thresh);

    // =================================================================
    // TX bindings — mirror of the RXA subset. TXA is WDSP channel type=1
    // (RXA is type=0) per OpenChannel's `type` param. SetChannelState is
    // channel-generic: state 1=on / 0=off, dmp 1=damp buffers on transition.
    // =================================================================

    // channel.h:82 — returns previous state (int). We usually ignore the return.
    [LibraryImport(LibraryName)]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial int SetChannelState(int channel, int state, int dmp);

    // fexchange2 (iobuffs.h:91) — TX-side frame exchange. Iin carries mono mic
    // samples, Qin stays silent, Iout/Qout receive modulated I/Q for the P1 EP2
    // outbound packer. INREAL/OUTREAL are `float` (wdsp.h:7-8) — NOT `double`
    // like fexchange0's interleaved buffers.
    [LibraryImport(LibraryName)]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial void fexchange2(
        int channel,
        ref float Iin,
        ref float Qin,
        ref float Iout,
        ref float Qout,
        out int error);

    [LibraryImport(LibraryName)]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial void SetTXAMode(int channel, int mode);

    [LibraryImport(LibraryName)]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial void SetTXABandpassFreqs(int channel, double f_low, double f_high);

    [LibraryImport(LibraryName)]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial void SetTXABandpassRun(int channel, int run);

    [LibraryImport(LibraryName)]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial void SetTXABandpassWindow(int channel, int wintype);

    // Correcting FIR — compensates the sinc droop introduced by TXA's
    // 48k → 192k upsample on P2. P2 firmware requires this on; P1 leaves it
    // off. Thetis audio.cs:1803-1808, pihpsdr transmitter.c:1288.
    [LibraryImport(LibraryName)]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial void SetTXACFIRRun(int channel, int run);

    [LibraryImport(LibraryName)]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial void SetTXAPanelRun(int channel, int run);

    [LibraryImport(LibraryName)]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial void SetTXAPanelGain1(int channel, double gain);

    // ALC (Automatic Level Control) must be on for the SSB modulator to emit
    // non-zero IQ. Upstream TX code carries a "TX ALC on (never switch it
    // off!)" warning. When the ALC is disabled the mic reaches TXA but the
    // modulator outputs 0.0 — confirmed on an HL2 live rig 2026-04-18.
    [LibraryImport(LibraryName)]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial void SetTXAALCSt(int channel, int state);

    [LibraryImport(LibraryName)]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial void SetTXAALCAttack(int channel, int attackMs);

    [LibraryImport(LibraryName)]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial void SetTXAALCDecay(int channel, int decayMs);

    [LibraryImport(LibraryName)]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial void SetTXAALCMaxGain(int channel, double maxGainDb);

    // Microphone noise gate — we don't want it shaping SSB audio.
    [LibraryImport(LibraryName)]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial void SetTXAAMSQRun(int channel, int run);

    // TX chain stage enables. WDSP ships these "off" at channel-create time
    // (see native/wdsp/TXA.c) but we assert them explicitly in OpenTxChannel
    // so our TX baseline is deterministic, not a byproduct of library
    // defaults. Enabling/tuning Leveler/Compressor is operator-controlled
    // follow-up work; this worktree only locks in the clean-slate state.
    [LibraryImport(LibraryName)]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial void SetTXALevelerSt(int channel, int state);

    // Leveler maximum-gain ceiling. WDSP's SetTXALevelerTop takes the value
    // in dB (wcpAGC.c:648 — converts internally via pow(10, maxgain/20)
    // to the linear `max_gain` field on the wcpagc struct). create_wcpagc
    // (TXA.c:169) ships with max_gain = 1.778 linear ≈ +5 dB; this setter
    // lets the operator widen/narrow the peak-leveling headroom at runtime.
    [LibraryImport(LibraryName)]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial void SetTXALevelerTop(int channel, double maxgain);

    [LibraryImport(LibraryName)]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial void SetTXACompressorRun(int channel, int run);

    [LibraryImport(LibraryName)]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial void SetTXACFCOMPRun(int channel, int run);

    // CFC (Continuous Frequency Compressor — multi-band frequency-domain
    // compressor sitting in xtxa between xeqp and xbandpass). Issue #123.
    // Entry points are case-sensitive — note `prof_i_le` is lowercase per
    // cfcomp.c. Verified via `nm -D libwdsp.so | grep -i CFC`.
    //
    // SetTXACFCOMPprofile takes parallel arrays F[], G[], E[] (frequency Hz,
    // compression dB, post-EQ gain dB) plus optional Q-derivative arrays for
    // the *parametric* mode. Pass IntPtr.Zero for Qg/Qe to select the classic
    // (pihpsdr / PowerSDR) non-parametric mode — cfcomp.c:122-123 falls back
    // to linear interpolation when the Q pointers are NULL. The caller pins
    // F/G/E with `fixed` blocks and passes them via `ref *pF`.
    [LibraryImport(LibraryName)]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial void SetTXACFCOMPprofile(
        int channel,
        int nfreqs,
        ref double F,
        ref double G,
        ref double E,
        IntPtr Qg,
        IntPtr Qe);

    // Frequency-independent pre-compressor gain (dB).
    [LibraryImport(LibraryName)]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial void SetTXACFCOMPPrecomp(int channel, double precomp);

    // Frequency-independent pre-EQ gain (dB).
    [LibraryImport(LibraryName)]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial void SetTXACFCOMPPrePeq(int channel, double prepeq);

    // Post-comp EQ branch enable (separate toggle from the master CFCOMPRun).
    [LibraryImport(LibraryName)]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial void SetTXACFCOMPPeqRun(int channel, int run);

    // Per-bin compression-meter readback. `comp_values` must be a pinned
    // double[] sized to the FFT bins; `ready` is set to 1 when a fresh frame
    // is available. Read-only diagnostic — not on the hot path.
    [LibraryImport(LibraryName)]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial void GetTXACFCOMPDisplayCompression(
        int channel,
        ref double comp_values,
        out int ready);

    [LibraryImport(LibraryName)]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial void SetTXAPHROTRun(int channel, int run);

    [LibraryImport(LibraryName)]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial void SetTXAosctrlRun(int channel, int run);

    [LibraryImport(LibraryName)]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial void SetTXAEQRun(int channel, int run);

    // TUN carrier generator (wdsp.h:586-589) injected post-DSP. Thetis
    // console.cs:18648 uses SetTXAPostGenMode(1) + SetTXAPostGenToneFreq(0.0)
    // + SetTXAPostGenToneMag(mag) to key a steady tone for antenna matching.
    // Same sequence here (see docs/prd/12-tx-feature.md §FR-7).
    [LibraryImport(LibraryName)]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial void SetTXAPostGenRun(int channel, int run);

    [LibraryImport(LibraryName)]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial void SetTXAPostGenMode(int channel, int mode);

    [LibraryImport(LibraryName)]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial void SetTXAPostGenToneMag(int channel, double mag);

    [LibraryImport(LibraryName)]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial void SetTXAPostGenToneFreq(int channel, double freq);

    // Two-tone test generator (wdsp.h:590-591). PostGen mode=1 sums two
    // tones at the modulator input. Standard PS calibration excitation —
    // see Thetis PSForm.cs:935-940. Independent of TUN (mode=0).
    [LibraryImport(LibraryName)]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial void SetTXAPostGenTTMag(int channel, double mag1, double mag2);

    [LibraryImport(LibraryName)]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial void SetTXAPostGenTTFreq(int channel, double freq1, double freq2);

    // Pre-DSP generator (injected before the TX chain). pihpsdr transmitter.c
    // :1293-1296 explicitly disables PreGen on TXA open — WDSP's create_channel
    // doesn't guarantee mag=0/run=0, and a residual PreGen tone would appear
    // alongside the PostGen tune tone as a second carrier.
    [LibraryImport(LibraryName)]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial void SetTXAPreGenRun(int channel, int run);

    [LibraryImport(LibraryName)]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial void SetTXAPreGenMode(int channel, int mode);

    [LibraryImport(LibraryName)]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial void SetTXAPreGenToneMag(int channel, double mag);

    [LibraryImport(LibraryName)]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial void SetTXAPreGenToneFreq(int channel, double freq);

    // TXA Panel input-select. pihpsdr sets this to 2 = "Mic I sample" on open
    // (transmitter.c:1298). Default varies by WDSP build — being explicit.
    [LibraryImport(LibraryName)]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial void SetTXAPanelSelect(int channel, int select);
